--- a/app/src/main/res/layout/add_category_fragment.xml
+++ b/app/src/main/res/layout/add_category_fragment.xml
@@ -3,17 +3,6 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/add_category_label"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/dialog_margin"
-        android:layout_marginEnd="@dimen/dialog_margin"
-        android:layout_marginBottom="@dimen/dialog_vertical_margin"
-        android:layout_marginTop="@dimen/dialog_vertical_margin"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-        android:text="@string/add_category_edit_text_hint"/>
-
     <EditText
         android:id="@+id/add_category_edit_text"
         android:layout_width="match_parent"
@@ -25,4 +14,12 @@
         android:inputType="textCapWords"
         android:hint="@string/add_category_edit_text_hint"
         android:importantForAutofill="no" />
+
+    <Button
+        android:id="@+id/add_category_submit_button"
+        style="@style/AppButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/submit" />
 </LinearLayout>
