--- a/app/src/main/res/layout/keyword_fragment_item.xml
+++ b/app/src/main/res/layout/keyword_fragment_item.xml
@@ -9,9 +9,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/list_horizontal_text_margin"
+        android:layout_marginEnd="@dimen/list_horizontal_text_margin"
         android:layout_marginTop="@dimen/list_top_text_margin"
         android:textColor="@color/white"
-        android:textAppearance="?attr/textAppearanceListItem" />
+        style="@style/ListItemHeadingStyle" />
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/keyword_delete_image_button"
