created widget and added comments
added package widget
added:
cookbook_app_widget.xml
cookbook_app_widget_info.xml
cookbook_widget_item.xml
CookbookAppWidget.java
CookbookWidgetRecipe.java
CookbookWidgetRecipeUnitTests.java
StackWidgetService.java
added tests for widgets

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#62a3ff</color>
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
+    <color name="colorSelector">#D3D3D3</color>
+    <color name="colorSelectorBackground">#F0F0F0</color>
 </resources>
