--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,6 +18,7 @@
     <dimen name="image_max_width">250dp</dimen>
     <dimen name="image_margin">4dp</dimen>
 
+
     <!-- cookbook fragment -->
     <dimen name="app_bar_height">140dp</dimen>
     <dimen name="minimum_app_bar_height">112dp</dimen>
@@ -58,6 +59,13 @@
     <!-- cookbook dialog fragments -->
     <dimen name="dialog_margin">8dp</dimen>
     <dimen name="dialog_vertical_margin">8dp</dimen>
+
+    <!--
+Refer to App Widget Documentation for margin information
+http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
+    -->
+    <dimen name="widget_margin">8dp</dimen>
+    <dimen name="widget_padding">8dp</dimen>
 
 
 </resources>
